# mode7

./: .gitignore  CMakeLists.txt  MacOSXBundleInfo.plist.in  app.h  bmp.c  obj.c  render.c
gdi/: gdi.c
sdl/: pocadv.c  pocadv.h
